# mcp-amdsmi

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  mypy.ini  package-lock.json  pyproject.toml  pytest.ini  requirements.txt
docs/: DOCKER_README.md  amdsmi-py-api.md
mcp_amdsmi/: __init__.py  amd_smi_wrapper.py  business_logic.py  http_transport.py  server.py  session_manager.py  text_formatting.py  unified_server.py
tests/: __init__.py  conftest.py  test_amd_smi_wrapper.py  test_business_logic.py  test_server.py  test_text_formatting.py  test_utils.py
tests/integration/: __init__.py  test_realworld_http_integration.py  test_simple_http_integration.py
tests/transport/: __init__.py  test_http_transport.py  test_session_management.py  test_sse_streaming.py
